--- a/fearless-girl/src/index.css
+++ b/fearless-girl/src/index.css
@@ -1,4 +1,21 @@
+/* Reset box model
+from https://css-tricks.com/box-sizing/ */
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
 body {
+  background-color: #fafafa;
+
   margin: 0;
   padding: 0;
   font-family: sans-serif;
